# JOpus

./: .gitignore  LICENSE  README.md  build.gradle  build.gradle.kts  opus_license.txt  settings.gradle  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle  build.gradle.kts  proguard-rules.pro
lib/src/androidTest/java/ashipo/jopus/: OpusTest.kt
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt  jopus.cpp  libjopus.map.txt
lib/src/main/java/ashipo/jopus/: Opus.kt
lib/src/main/java/com/fake/jopus/: Opus.kt
microbenchmark/: build.gradle.kts
microbenchmark/src/androidTest/java/ashipo/jopus/microbenchmark/: CommonBenchmark.kt  DecodeBenchmark.kt
microbenchmark/src/androidTest/java/com/fake/microbenchmark/: CommonBenchmark.kt  DecodeBenchmark.kt
